--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             font-kerning: auto;
             margin: 0;
             background-color: #000000;
+            position: relative;
             overflow-x: hidden;
         }
         
