Another potential fix for issue #1.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <meta name="author" content="Labyrinth AI">
     <title>Labyrinth AI</title>
     <style>
+        html {
+            overflow-x: hidden;
+        }
+        
         body {
             font-family: "Helvetica Neue", Helvetica, "Lucida Grande", sans-serif;
             font-size: 17px;
             font-kerning: auto;
             margin: 0;
             background-color: #000000;
-            position: relative;
             overflow-x: hidden;
         }
         
