Made our-work section responsive.

--- a/work.html
+++ b/work.html
@@ -30,6 +30,8 @@
             <img src="images/hamburger-menu.svg" class="hamburger-menu">
         </div>
     </div>
+    <h1>Neural Terrain Generation</h1>
+    <h1>Dream Field</h1>
 
     <script type="text/javascript" src="js/header_scroll.js"></script>
 </body>
