--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,18 @@
     <link rel="stylesheet" href="styles/header.css">
     <title>Labyrinth AI</title>
     <style>
-        .about {
-            padding-left: 10px;
-            background-color: white;
-            color: white;
-            height: 200vh;
-            width: 100vw;
+        .contact-meta {
+            display: flex;
+            justify-content: center;
+        }
+        
+        .contact-container {
+            text-align: center;
+            margin-top: 60px;
+            margin-left: 30px;
+            margin-right: 30px;
+            width: 100%;
+            max-width: 800px;
         }
     </style>
 </head>
@@ -39,7 +45,13 @@
             <img src="images/hamburger-menu.svg" class="hamburger-menu">
         </div>
     </div>
-    <div class="about">
+    <div class="contact-meta">
+        <div class="contact-container">
+            <p>Reality is a pertubation of quantum fields</p>
+            <p>Exchange virtual particles with me</p>
+            <p>At the bottom of the Dirac sea</p>
+            <p>For inquiries, contact <a href="mailto:donnellyhd@outlook.com">donnellyhd@outlook.com</a></p>
+        </div>
     </div>
 
     <script type="text/javascript" src="js/header_scroll.js"></script>
