Rebranded to Novaia.

--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-    <meta name="author" content="Labyrinth AI">
+    <meta name="author" content="Novaia">
     <link rel="stylesheet" href="styles/basic.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/hero.css">
     <link rel="stylesheet" href="styles/home.css">
-    <title>Labyrinth AI</title>
+    <title>Novaia</title>
 </head>
 
 <body>
     <div class="header">
         <div class="left-section">
             <a href="./index.html">
-                <img src="images/labyrinth-web-logo.png" class="labyrinth-logo">
+                <img src="images/novaia-logo.png" class="labyrinth-logo">
             </a>
         </div>
         <div class="right-section">
