--- a/contact.html
+++ b/contact.html
@@ -8,22 +8,8 @@
     <meta name="author" content="Novaia">
     <link rel="stylesheet" href="styles/basic.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <title>Novaia</title>
-    <style>
-        .contact-meta {
-            display: flex;
-            justify-content: center;
-        }
-        
-        .contact-container {
-            text-align: center;
-            margin-top: 60px;
-            margin-left: 30px;
-            margin-right: 30px;
-            width: 100%;
-            max-width: 800px;
-        }
-    </style>
 </head>
 
 <body>
