Added start of ntg description.

--- a/work.html
+++ b/work.html
@@ -36,8 +36,8 @@
             <h1>Neural Terrain Generation</h1>
             <div class="image-paragraph">
                 <img src="images/ntg-horizontal-screenshot.png" class="our-work-image">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Neural Terrain Generation is a collection of generative neural networks that output heightmaps for 3D terrain. With our dataset of 600 thousand satellite images, we've been able to train diffusion models that capture the beauty of Earth's
+                    surface. In a single click, you can transform a flat plane into an Apalachian mountain, a Saharan desert, or anything in between.</p>
             </div>
             <h1>Dream Field</h1>
             <div class="image-paragraph">
