Changed ntg and dream field links to their anchors.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="images/ntg-screenshot-cropped-pre.png" class="our-work-image" salt="Screenshot of Dream Field.">
                 </div>
             </a>
-            <a href="./work.html" class="our-work-link">
+            <a href="./work.html#dream-field" class="our-work-link">
                 <div class="our-work-section">
                     <h2 class="our-work-section-title">Dream Field</h2>
                     <img src="images/dream-field-screenshot-cropped.png" class="our-work-image" alt="Screenshot of Dream Field.">
