--- a/work.html
+++ b/work.html
@@ -33,13 +33,13 @@
     </div>
     <div class="our-work-meta">
         <div class="our-work-container ">
-            <h1>Neural Terrain Generation</h1>
+            <h1 id="neural-terrain-generation">Neural Terrain Generation</h1>
             <div class="image-paragraph">
                 <img src="images/ntg-horizontal-screenshot.png" class="our-work-image">
                 <p>Neural Terrain Generation is a collection of generative neural networks that output heightmaps for 3D terrain. With our dataset of 600 thousand satellite images, we've been able to train diffusion models that capture the beauty of Earth's
                     surface. In a single click, you can transform a flat plane into an Apalachian mountain, a Saharan desert, or anything in between.</p>
             </div>
-            <h1>Dream Field</h1>
+            <h1 id="dream-field">Dream Field</h1>
             <div class="image-paragraph">
                 <img src="images/dream-field-horizontal-screenshot.png" class="our-work-image">
                 <p>Dream Field is a virtual reality interface for AI. It has three core objectives: education, communication, and productivity.</p>
