Added links to external project pages.

--- a/work.html
+++ b/work.html
@@ -38,6 +38,10 @@
                 <img src="images/ntg-horizontal-screenshot.png" class="our-work-image">
                 <p>Neural Terrain Generation is a collection of generative neural networks that output heightmaps for 3D terrain. With our dataset of 600 thousand satellite images, we've been able to train diffusion models that capture the beauty of Earth's
                     surface. In a single click, you can transform a flat plane into an Apalachian mountain, a Saharan desert, or anything in between.</p>
+                <div class="our-work-link-container">
+                    <a href="https://github.com/novaia-computing/ntg" class="our-work-link">View Code</a>
+                    <a href="https://assetstore.unity.com/packages/tools/terrain/neural-terrain-generation-249580" class="our-work-link">Download for Unity</a>
+                </div>
             </div>
             <h1 id="dream-field">Dream Field</h1>
             <div class="image-paragraph">
@@ -54,6 +58,9 @@
                 <h2>Productivity</h2>
                 <p>Education and communication set the stage for Dream Field's most important objective: productivity. By providing these pillars, Dream Field will accelerate technological innovation and scientific discovery. By working inside Dream Field,
                     we will be able to understand problems in a whole new light and iterate on solutions faster than ever before.</p>
+            </div>
+            <div class="our-work-link-container">
+                <a href="https://github.com/hayden-donnelly/dream-field-demo" class="our-work-link">View Code</a>
             </div>
         </div>
     </div>
