Adjusted subheader margins on work page.

--- a/work.html
+++ b/work.html
@@ -47,15 +47,15 @@
             <div class="image-paragraph">
                 <img src="images/dream-field-horizontal-screenshot.png" class="our-work-image">
                 <p>Dream Field is a virtual reality interface for AI. It has three core objectives: education, communication, and productivity.</p>
-                <h2>Education</h2>
+                <h2 class="our-work-subheader">Education</h2>
                 <p>AI and virtual reality will revolutionize education as we know it. Dream Field sits at the intersection of these technologies and aims to make education faster, more immersive, and more accessible than ever before. Students will no longer
                     read about far away places and abstract concepts, they will experience them. On a wim they will be able to travel to the bottom of the ocean, or to the surface of Mars. They will be able to see the world through the eyes of famous
                     historical figures, and witness firsthand the decisions that have shaped the world we live in. All of this, made possible by generative AI, and enhanced by virtual reality.</p>
-                <h2>Communication</h2>
+                <h2 class="our-work-subheader">Communication</h2>
                 <p>Large language models are impressive, but they are stuck inside a chat box that limits our ability to communicate with them. To get the most out of AI, we must open channels for non-verbal communication. Dream Field enables this by creating
                     virtual worlds where both humans and AI are embodied. When you look at something in Dream Field, the AI will know what you're looking at. When you move your hands to exagerate a point, the AI will understand. This is the future of
                     human-AI communication.</p>
-                <h2>Productivity</h2>
+                <h2 class="our-work-subheader">Productivity</h2>
                 <p>Education and communication set the stage for Dream Field's most important objective: productivity. By providing these pillars, Dream Field will accelerate technological innovation and scientific discovery. By working inside Dream Field,
                     we will be able to understand problems in a whole new light and iterate on solutions faster than ever before.</p>
             </div>
