Adding spacing div between work sections.

--- a/work.html
+++ b/work.html
@@ -33,6 +33,7 @@
     </div>
     <div class="our-work-meta">
         <div class="our-work-container ">
+            <div class="our-work-spacer"></div>
             <h1 id="neural-terrain-generation">Neural Terrain Generation</h1>
             <div class="image-paragraph">
                 <img src="images/ntg-horizontal-screenshot.png" class="our-work-image">
@@ -43,6 +44,7 @@
                     <a href="https://assetstore.unity.com/packages/tools/terrain/neural-terrain-generation-249580" class="our-work-link">Download for Unity</a>
                 </div>
             </div>
+            <div class="our-work-spacer"></div>
             <h1 id="dream-field">Dream Field</h1>
             <div class="image-paragraph">
                 <img src="images/dream-field-horizontal-screenshot.png" class="our-work-image">
