Added another spacer to bottom of work page.

--- a/work.html
+++ b/work.html
@@ -64,6 +64,7 @@
             <div class="our-work-link-container">
                 <a href="https://github.com/hayden-donnelly/dream-field-demo" class="our-work-link">View Code</a>
             </div>
+            <div class="our-work-spacer"></div>
         </div>
     </div>
     <script type="text/javascript" src="js/header_scroll.js"></script>
