Updated email link colour.

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <p>Reality is a pertubation of quantum fields</p>
             <p>Exchange virtual particles with me</p>
             <p>At the bottom of the Dirac sea</p>
-            <p>For inquiries, contact <a href="mailto:donnellyhd@outlook.com">donnellyhd@outlook.com</a></p>
+            <p>For inquiries, contact <a href="mailto:donnellyhd@outlook.com" class="email-link">donnellyhd@outlook.com</a></p>
         </div>
     </div>
 
