--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
         <div class="left-section">
             <a href="./index.html">
-                <img src="images/novaia-logo.png" class="labyrinth-logo">
+                <img src="images/novaia-web-logo.png" class="labyrinth-logo">
             </a>
         </div>
         <div class="right-section">
