--- a/work.html
+++ b/work.html
@@ -38,7 +38,7 @@
             <div class="image-paragraph">
                 <img src="images/ntg-horizontal-screenshot.png" class="our-work-image">
                 <p>Neural Terrain Generation is a collection of generative neural networks that output heightmaps for 3D terrain. With our dataset of 600 thousand satellite images, we've been able to train diffusion models that capture the beauty of Earth's
-                    surface. In a single click, you can transform a flat plane into an Apalachian mountain, a Saharan desert, or anything in between.</p>
+                    surface. In a single click, you can transform a flat plane into an Appalachian mountain, a Saharan desert, or anything in between.</p>
                 <div class="our-work-link-container">
                     <a href="https://github.com/novaia-computing/ntg" class="our-work-link">View Code</a>
                     <a href="https://assetstore.unity.com/packages/tools/terrain/neural-terrain-generation-249580" class="our-work-link">Download for Unity</a>
