--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
     <meta name="author" content="Novaia">
+    <meta name="keywords" content="Novaia, Generative AI, Procedural Generation, 3D">
+    <meta name="description" content="Novaia is a generative AI company that creates tools for 3D workflows.">
     <link rel="stylesheet" href="styles/basic.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/hero.css">
@@ -27,9 +29,7 @@
         </div>
     </div>
     <div class="hero">
-        <video playsinline autoplay muted loop class="hero-video">
-            <source src="https://res.cloudinary.com/dlblfkz6e/video/upload/v1694309752/novaia-web-background-video_fyrixg.mp4" type="video/mp4">
-        </video>
+        <img src="images/thecourtyard.webp" alt="3D render of scifi courtyard." class="hero-video">
         <h1 class="hero-text">Generative AI for 3D workflows</h1>
     </div>
     <div class="our-work-meta">
