--- a/index.html
+++ b/index.html
@@ -8,68 +8,20 @@
     <meta name="author" content="Novaia">
     <meta name="keywords" content="Novaia, Generative AI, Procedural Generation, 3D">
     <meta name="description" content="Novaia is a generative AI company that creates tools for 3D workflows.">
-    <link rel="stylesheet" href="styles/basic.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/hero.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Mono:wght@400;600&display=swap" rel="stylesheet">
     <title>Novaia</title>
+    <style>
+        body {
+            font-family: 'Red Hat Mono', monospace;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="header">
-        <div class="left-section">
-            <a href="./index.html">
-                <img src="images/novaia-web-logo.png" class="labyrinth-logo">
-            </a>
-        </div>
-        <div class="right-section">
-            <a href="./contact.html" class="header-link">
-                <p>Contact</p>
-            </a>
-        </div>
-    </div>
-    <div class="hero">
-        <img src="images/thecourtyard.webp" alt="3D render of scifi courtyard." class="hero-video">
-        <h1 class="hero-text">Generative AI for 3D workflows</h1>
-    </div>
-    <div class="our-work-meta">
-        <div class="our-work-container ">
-            <div class="our-work-spacer"></div>
-            <h1 id="neural-terrain-generation">Neural Terrain Generation</h1>
-            <div class="image-paragraph">
-                <img src="images/ntg-horizontal-screenshot.png" class="our-work-image">
-                <p>Neural Terrain Generation is a collection of generative neural networks that output heightmaps for 3D terrain. With our dataset of 600 thousand satellite images, we've been able to train diffusion models that capture the beauty of Earth's
-                    surface. In a single click, you can transform a flat plane into an Appalachian mountain, a Saharan desert, or anything in between.</p>
-                <div class="our-work-link-container">
-                    <a href="https://github.com/novaia-computing/ntg" class="our-work-link">View Code</a>
-                    <a href="https://assetstore.unity.com/packages/tools/terrain/neural-terrain-generation-249580" class="our-work-link">Download for Unity</a>
-                </div>
-            </div>
-            <div class="our-work-spacer"></div>
-            <h1 id="dream-field">Dream Field</h1>
-            <div class="image-paragraph">
-                <img src="images/dream-field-horizontal-screenshot.png" class="our-work-image">
-                <p>Dream Field is a virtual reality interface for AI. It has three core objectives: education, communication, and productivity.</p>
-                <h2 class="our-work-subheader">Education</h2>
-                <p>AI and virtual reality will revolutionize education as we know it. Dream Field sits at the intersection of these technologies and aims to make education faster, more immersive, and more accessible than ever before. Students will no longer
-                    read about far away places and abstract concepts, they will experience them. On a wim they will be able to travel to the bottom of the ocean, or to the surface of Mars. They will be able to see the world through the eyes of famous
-                    historical figures, and witness firsthand the decisions that have shaped the world we live in. All of this, made possible by generative AI, and enhanced by virtual reality.</p>
-                <h2 class="our-work-subheader">Communication</h2>
-                <p>Large language models are impressive, but they are stuck inside a chat box that limits our ability to communicate with them. To get the most out of AI, we must open channels for non-verbal communication. Dream Field enables this by creating
-                    virtual worlds where both humans and AI are embodied. When you look at something in Dream Field, the AI will know what you're looking at. When you move your hands to exagerate a point, the AI will understand. This is the future of
-                    human-AI communication.</p>
-                <h2 class="our-work-subheader">Productivity</h2>
-                <p>Education and communication set the stage for Dream Field's most important objective: productivity. By providing these pillars, Dream Field will accelerate technological innovation and scientific discovery. By working inside Dream Field,
-                    we will be able to understand problems in a whole new light and iterate on solutions faster than ever before.</p>
-            </div>
-            <div class="our-work-link-container">
-                <a href="https://github.com/hayden-donnelly/dream-field-demo" class="our-work-link">View Code</a>
-            </div>
-            <div class="our-work-spacer"></div>
-        </div>
-    </div>
-    <div class="about">
-    </div>
-
-    <script type="text/javascript" src="js/header_scroll.js"></script>
+    <h1>Novaia</h1>
+    <p>Generative AI for a three dimensional world.</p>
+    <p><a href="https://github.com/novaia-computing">GitHub</a> <a href="https://twitter.com/NovaiaComputing">Twitter</a></p>
 </body>
